overflow fix

--- a/screen.css
+++ b/screen.css
@@ -13,6 +13,7 @@ div {
     background-color: white;
     font-size: 2rem;
     font-family: Arial, sans-serif;
+    overflow: hidden;
 }
 
 
